# python-fast-api-course

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: commands.md  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
001-python-backend-quickstart/: README.md
001-python-backend-quickstart/exercises/: 01_types.py  02_dataclasses.py  03_async.py
001-python-backend-quickstart/project/: README.md
001-python-backend-quickstart/theory/: 01-environment.md  02-type-hints.md  03-dataclasses.md  04-async-basics.md  05-decorators.md
002-http-rest-fundamentals/: README.md
002-http-rest-fundamentals/exercises/: 01_analyze_requests.py  02_design_rest_api.py  (+1 more)
003-fastapi-basics/: README.md
004-request-response/: README.md
005-pydantic-validation/: README.md
006-sql-databases/: README.md
007-sqlalchemy-orm/: README.md
008-api-crud-operations/: README.md
009-authentication-jwt/: README.md
010-authorization-permissions/: README.md
011-testing-apis/: README.md
012-advanced-async-python/: README.md
012-async-python/: README.md
013-background-tasks/: README.md
014-caching-redis/: README.md
015-file-uploads/: README.md
016-websockets/: README.md
017-docker-containers/: README.md
018-ci-cd-deployment/: README.md
019-security-best-practices/: README.md
020-performance-optimization/: README.md
021-logging-monitoring/: README.md
022-api-versioning/: README.md
023-rate-limiting/: README.md
024-microservices-basics/: README.md
025-capstone-project/: README.md
(+292 files in other folders)
